# techscout-rag-recommend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  TEST_PLAN.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docker.yml  docs.yml  gitleaks.yml  proto-guard.yml  proto-sync.yml
api/: app.py  deps.py  metrics.py  paths.py  schemas.py
api/middleware/: error_handler.py  rate_limit.py
api/routes/: compare.py  products.py  recommend.py  search.py
configs/: crawler.yaml  product_categories.yaml  scoring_weights.yaml  settings.yaml
docker/: Dockerfile  docker-compose.yml
docker/debezium/: product-catalog-connector.json
docker/prometheus/: prometheus.yml
docs/: index.md  index.vi.md
docs/api/: endpoints.md  endpoints.vi.md  schemas.md  schemas.vi.md
docs/architecture/: c4-model.md  c4-model.vi.md  cdc.md  cdc.vi.md  data-flow.md  data-flow.vi.md  guardrails.md  guardrails.vi.md  hybrid-retrieval.md  hybrid-retrieval.vi.md  overview.md  overview.vi.md  pipeline-flow.md  pipeline-flow.vi.md  pipeline.md  pipeline.vi.md  query-rewriting.md  query-rewriting.vi.md  structure.md  structure.vi.md  write-path.md  write-path.vi.md
docs/deployment/: docker.md  docker.vi.md  monitoring.md  monitoring.vi.md
docs/development/: contributing.md  contributing.vi.md  crawler.md  crawler.vi.md  ingestion.md  ingestion.vi.md  proto-versioning.md  proto-versioning.vi.md  testing.md  testing.vi.md
docs/getting-started/: development.md  development.vi.md  installation.md  installation.vi.md  quickstart.md  quickstart.vi.md
docs/scripts/: crawl.md  crawl.vi.md  index.md  index.vi.md  ingest.md  ingest.vi.md  seed.md  seed.vi.md  sync-worker.md  sync-worker.vi.md
evaluation/: eval_compare.py  eval_recommend.py  test_cases.json
scripts/: discover_reviews_api.py  gen_proto.sh  ingest.py  probe_comment_api.py  seed.py  sync_worker.py
src/catalog/: __init__.py  product_repository.py
src/comparison/: comparator.py  comparison_formatter.py  pros_cons_extractor.py  spec_aligner.py
src/crawler/: config.py  http_client.py  parser.py
src/embedding/: multi_field_embedder.py  product_embedder.py  vector_store.py
src/generation/: guardrails.py  llm_client.py  response_parser.py
src/grpc_gen/: __init__.py
src/grpc_server/: server.py  service.py
src/guardrails/: __init__.py  base.py  config.py  exceptions.py  fallback.py  logging_utils.py  types.py
src/ingestion/: chunker.py  (+5 more)
tests/: conftest.py  test_cellphones_reviews.py  test_cellphones_spider.py  test_grpc_service.py
(+82 files in other folders)
