[project]
name = "rag-product-recommend"
version = "0.1.0"
description = "RAG-based product recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    # LLM Clients
    "anthropic>=0.25.0",
    "openai>=1.12.0",
    # Embedding & Vector DB
    "chromadb>=0.4.24",
    # Data Processing
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
