[project]
name = "techscout-rag-recommend"
version = "0.1.0"
description = "RAG-based product recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    # Observability (Prometheus metrics exposed at /metrics)
    "prometheus-fastapi-instrumentator>=7.0.0",
    # LLM Clients
    "anthropic>=0.25.0",
    "openai>=1.12.0",
    "google-genai>=1.0.0",
    # Embedding & Vector DB (Postgres + pgvector)
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.3.0",
    # Keyword search & CDC sync (Elasticsearch + Kafka)
    "elasticsearch>=8.13.0,<9",
    "confluent-kafka>=2.4.0",
    # Data Processing
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    # Crawler
    "lxml>=5.0.0",
    "tenacity>=8.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # Internal gRPC server (consumed by the gateway)
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=8.0.0",
    "grpcio-tools>=1.62.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-static-i18n>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
target-version = "py311"
line-length = 100
# Generated gRPC stubs are not hand-maintained.
extend-exclude = ["**/grpc_gen/**"]

[tool.bandit]
# B608: SQL table names are interpolated from trusted internal config, while all
# runtime values are passed as parameterized %s placeholders (no user input in
# SQL strings). Mirrors the `-s B608` skip used in .github/workflows/bandit.yml.
skips = ["B608"]
